# resources

./: .gitignore  analisis_outliers.ipynb  app.py  exploracion_datos_sinteticos.ipynb  graficas_linea_variables.ipynb  pyproject.toml  synthetic_api_activity.csv  synthetic_api_activity_ground_truth.csv
data/: dataset_sintetico.csv
demos/: 01_hola_mundo.py  02_texto_y_datos.py  03_widgets.py  04_layout.py  05_graficos.py  06_session_state.py  07_cache.py  08_formulario.py  09_chat.py  10_status.py  11_page_config.py  12_dashboard.py
notebooks/: 01_intro_streamlit.ipynb
