[project]
name = "resources"
version = "0.1.0"
description = "A collection of resources for various topics."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.45.0",
    "plotly>=6.1.0",
    "pandas>=2.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ruff>=0.15.6",
]

[tool.ruff]
line-length = 120
target-version = "py312"