[project]
name = "resources"
version = "0.1.0"
description = "A collection of resources for various topics."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.45.0",
    "plotly>=6.1.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.6.0",
    "shap>=0.46.0",
    "joblib>=1.4.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "nbformat>=5.10.4",
    "statsmodels>=0.14.6",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ruff>=0.15.6",
]

[tool.ruff]
line-length = 120
target-version = "py312"
